settings page / modify events
