# backend/src/modules/organizers/organizer.router.ts
@@ -1,7 +1,8 @@
 import { Router } from 'express';
-import { handleCreateOrganizer, handleListOrganizers } from './organizer.controller';
+import { handleCreateOrganizer, handleDeleteOrganizer, handleListOrganizers } from './organizer.controller';
 
 export const organizersRouter = Router();
 
 organizersRouter.get('/', handleListOrganizers);
 organizersRouter.post('/', handleCreateOrganizer);
+organizersRouter.delete('/:id', handleDeleteOrganizer);
