# backend/src/modules/users/user.router.ts
@@ -1,7 +1,8 @@
 import { Router } from 'express';
-import { handleCreateUser, handleListUsers } from './user.controller';
+import { handleCreateUser, handleDeleteUser, handleListUsers } from './user.controller';
 
 export const usersRouter = Router();
 
 usersRouter.get('/', handleListUsers);
 usersRouter.post('/', handleCreateUser);
+usersRouter.delete('/:id', handleDeleteUser);
