# backend/src/modules/venues/venue.router.ts
@@ -1,7 +1,8 @@
 import { Router } from 'express';
-import { handleCreateVenue, handleListVenues } from './venue.controller';
+import { handleCreateVenue, handleDeleteVenue, handleListVenues } from './venue.controller';
 
 export const venuesRouter = Router();
 
 venuesRouter.get('/', handleListVenues);
 venuesRouter.post('/', handleCreateVenue);
+venuesRouter.delete('/:id', handleDeleteVenue);
